# HunterSerializer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
templates/: create.html.hbs  index.html.hbs
