[package]
name = "HunterSerializer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
base64 = "0.22.1"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars", "tera", "minijinja"]

[dependencies.mongodb]
version = "3.0.1"
